# ECS-SFML-Platformer

./: README.md
ECS SFML Platformer/: ECS SFML Platformer.sln  ECS SFML Platformer.vcxproj  ECS SFML Platformer.vcxproj.filters
ECS SFML Platformer/Debug/: vc142.idb
ECS SFML Platformer/Debug/ECS SFML.90605D5E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ECS SFML Platformer.lastbuildstate  ECS SFML Platformer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ECS SFML Platformer/Release/: ECS SFML Platformer.iobj  ECS SFML Platformer.ipdb
ECS SFML Platformer/Release/ECS SFML.90605D5E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ECS SFML Platformer.lastbuildstate  ECS SFML Platformer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ECS SFML Platformer/SourceCode/: ECS SFML Platformer.cpp
ECS SFML Platformer/SourceCode/Private/Managers/: MSystemManager.cpp
ECS SFML Platformer/SourceCode/Public/: GlobalSettings.h  WorldGravity.h
ECS_SFML/: CMakeLists.txt  ECSSFMLPlatformer.cpp
ECS_SFML/SourceCode/Private/Managers/: MSystemManager.cpp
ECS_SFML/SourceCode/Public/: GlobalSettings.h  WorldGravity.h
ECS_SFML/SourceCode/Public/Components/: CCollisionComponent.h  CInputComponent.h  CShapeTypeComponent.h  CTransformComponent.h
ECS_SFML/SourceCode/Public/Helper/: HGrid.h
ECS_SFML/SourceCode/Public/Managers/: MSystemManager.h
ECS_SFML/SourceCode/Public/Prefab/: PF_BottomBox.h  PF_MovingRectangle.h  PF_TopBox.h
ECS_SFML/SourceCode/Public/Systems/: SPhysicsSystem.h  SRenderSystem.h
(+14 files in other folders)
